# power_grid_public

./: .gitignore  pyproject.toml
edf_test_technique/src/: EnergyStorageSystem.py  Grid.py  IndustrialSite.py  PhotovoltaicPowerPlant.py  PointOfConnection.py
edf_test_technique/src/api/: main.py
edf_test_technique/src/api/models/: EssMeasure.py  PocMeasure.py  PvMeasure.py
edf_test_technique/src/entities/: PointOfConnection.py
edf_test_technique/src/errors/: EssChargeError.py  EssStockError.py  PocChargeError.py  PvChargeError.py
edf_test_technique/tests/ess/: test_energy_storage_system.py
edf_test_technique/tests/grid/: test_grid_measures.py
edf_test_technique/tests/poc/: test_poc.py
edf_test_technique/tests/pv/: test_pv.py
notebooks/: Methodology.ipynb  Slides.ipynb
slides/: Slides.html
