[tool.poetry]
name = "edf-test-technique"
version = "0.1.0"
description = ""
authors = ["Romain Mularczyk <romain.mularczyk@gmail.com>"]
readme = "README.md"
# packages = [{include = "edf_test_technique"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.1"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib"
]

pythonpath = "src"
